kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "sample"
  namespace: "dev"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  template:
    metadata:
      labels:
        app: "sample"
    spec:
      containers:
        - image: kamalagg2411/sample:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 10
            tcpSocket:
              port: 8200
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8200
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: "sample"
          ports:
            - containerPort: 8200
#      imagePullSecrets:
#        - name: regcred
