kube/service.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  name: "sample"
  namespace: "dev"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8200
      #  type: LoadBalancer
  selector:
    app: "sample"
