kube/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample
  namespace: dev
spec:
  gateways:
    - istio-ingressgateway.istio-system.gateway.cluster.local
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /test
      route:
        - destination:
            host: "sample.dev.svc.cluster.local"
            port:
              number: 80
